--- a/TODO.txt
+++ b/TODO.txt
@@ -21,6 +21,7 @@ EXE virus https://stackoverflow.com/questions/43777106/program-made-with-pyinsta
 Cover mouse hover Buttons anzeigen
 Multiselect
 Sortieren über Treeview header
+Fertigstellung markieren
 
 
 ===DONE===
