--- a/TODO.txt
+++ b/TODO.txt
@@ -20,11 +20,12 @@ EXE virus https://stackoverflow.com/questions/43777106/program-made-with-pyinsta
 Cover mouse hover Buttons anzeigen
 Multiselect
 Sortieren über Treeview header
-Elementinformationen in Jason
+Elementinformationen in Json
 	Missing covers index
 	Mark finished games
 	Bookmarks
-
+Group by platfrom holder
+	Json keywords
 
 
 ===DONE===
