Adds platforms und regions to graphs

--- a/TODO.txt
+++ b/TODO.txt
@@ -23,6 +23,7 @@ Elementinformationen in Json
 	Missing covers index
 Group by platfrom holder
 	Json keywords
+View double click -> detailed item view
 
 
 ===DONE===
