--- a/TODO.txt
+++ b/TODO.txt
@@ -26,6 +26,8 @@ View double click -> detailed item view
 	Covers
 Graph canvas scroll bar
 Download history
+Bugs
+	klammern in filter strings -> regex kein ergebnis
 
 ===DONE===
 Group by platfrom holder
