--- a/TODO.txt
+++ b/TODO.txt
@@ -25,6 +25,7 @@ Graph canvas scroll bar
 Download history
 Bugs
 	klammern in filter strings -> regex kein ergebnis
+	treeview header sort im group modus
 Treeview contextmenu
 	Bookmark, finished, open on VGC, details, online info
 
