--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,7 @@ Custom messagboxes
 Treeview home / end / page up / page down
 Graph canvas scroll bar
 Graph popup
+Offer app restart after language change
 
 ===Low priority===
 Multiselect
@@ -11,6 +12,8 @@ Multiselect
 	Remove all bookmarks (selected) / contextmenu
 
 ===DONE===
+Installer
+App data path
 Filter presets
 Find duplicates (group by VGC ID)
 Datepicker
