--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+Fix date sort when none standard locale is applied
+
 Find missing covers
 Filter help (regex, date formats, etc.)
 Custom messagboxes
